--- a/watch group/css/main.css
+++ b/watch group/css/main.css
@@ -1126,6 +1126,43 @@ a, a:hover {
   margin: 5px auto;
 }
 
+#amount_object_card {
+  height: 40px;
+  width: 40px;
+  appearance: textfield;
+  border-radius: 0 !important;
+  border: 1px solid #ddd;
+  color: #333;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+  text-align: center;
+  font-size: 14px;
+}
+
+#amount_object_card::-webkit-outer-spin-button,
+#amount_object_card::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+#add_amount_object_card, #subtract_amount_object_card {
+  width: 25px;
+  height: 40px;
+  padding: 0;
+  border: 0;
+  font-weight: 400;
+  color: #555;
+  text-shadow: 1px 1px 1px #fff;
+  border: 1px solid #ddd;
+  font-size: 14px;
+  background: #f9f9f9;
+  transition: 0.3s;
+}
+
+#add_amount_object_card:hover, #subtract_amount_object_card:hover {
+  color: #000;
+  background: #dfdfdf;
+}
+
+
 @media (max-width: 991px) {
   .open-mobile-menu-btn-continer {
     display: block;
