--- a/mini widgets/sсss/about_card_with_shift.css
+++ b/mini widgets/sсss/about_card_with_shift.css
@@ -7,21 +7,30 @@
 }
 
 main {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 960px) {
+  main {
+    flex-direction: column;
+    padding: 50px 0;
+  }
 }
 
 .card {
   width: 200px;
   height: 200px;
+  min-width: 200px;
+  min-height: 200px;
   position: relative;
-  margin: 0 50px;
+  margin: 50px;
   border-radius: 10px;
 }
 .card .fg-face {
   background: #e64b3d;
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -34,7 +43,6 @@ main {
 }
 .card .bg-face {
   background: #ffffff;
-  z-index: -1;
   font-size: 12px;
   box-shadow: 0 0 30px 0 #eee;
   display: flex;
@@ -59,11 +67,17 @@ main {
   width: 100%;
   height: 100%;
   transition: 0.3s;
+  min-width: 200px;
+  min-height: 200px;
 }
-.card:hover .fg-face {
+.card:hover .fg-face,
+.card .fg-face:hover,
+.card .fg-face:hover {
   transform: translate(-25%, -40%);
 }
-.card:hover .bg-face {
+.card:hover .bg-face,
+.card .bg-face:hover,
+.card .bg-face:hover {
   transform: translate(25%, 40%);
 }
 
