--- a/mini widgets/sсss/about_card_with_shift.scss
+++ b/mini widgets/sсss/about_card_with_shift.scss
@@ -9,21 +9,28 @@ $main-color: #e64b3d;
 }
 
 main {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: 960px) {
+    flex-direction: column;
+    padding: 50px 0;
+  }
 }
 
 .card {
   width: 200px;
   height: 200px;
+  min-width: 200px;
+  min-height: 200px;
   position: relative;
-  margin: 0 50px;
+  margin: 50px;
   border-radius: 10px;
   
   .fg-face {
     background: $main-color;
+    z-index: 2;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,7 +44,6 @@ main {
 
   .bg-face {
     background: #ffffff;
-    z-index: -1;
     font-size: 12px;
     box-shadow: 0 0 30px 0 #eee;
     display: flex;
@@ -63,14 +69,21 @@ main {
     width: 100%;
     height: 100%;
     transition: 0.3s;
+    min-width: 200px;
+    min-height: 200px;
   }
 
-  &:hover .fg-face {
+  &:hover .fg-face,
+  .fg-face:hover,
+  .fg-face:hover {
     transform: translate(-25%, -40%);
   }
 
-  &:hover .bg-face {
+  &:hover .bg-face,
+  .bg-face:hover,
+  .bg-face:hover {
     transform: translate(25%, 40%);
   }
 }
+
 
