--- a/planning app/css/style.css
+++ b/planning app/css/style.css
@@ -468,4 +468,10 @@ header {
   justify-content: space-between;
 }
 
+@media screen and (max-width: 1100px) {
+  .welcome-section__carousel__text-content__header {
+    padding-top: 50px;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
