--- a/planning app/css/style.sass
+++ b/planning app/css/style.sass
@@ -401,7 +401,9 @@ header
 
 
 
-
+@media screen and (max-width: 1100px)
+  .welcome-section__carousel__text-content__header
+    padding-top: 50px
 
 
 
