--- a/planning app/css/style.sass
+++ b/planning app/css/style.sass
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap')
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap')
 
 *
@@ -10,6 +10,7 @@ body
   margin: 0
   padding: 0
   letter-spacing: 0.03em
+  //overflow: hidden
 
 a
   display: block
@@ -339,7 +340,7 @@ header
 
 .resources
   background: #F5F8FF
-  padding: 104px 0
+  padding: 104px 0 215px
   text-align: center
   display: flex
   flex-direction: column
@@ -348,11 +349,27 @@ header
     text-align: center
 
 #resources__carousel
+  margin-top: 92px
+  display: flex
+  align-items: center
+  justify-content: center
+  position: relative
   & .item
     border: 1px solid #D8E3FE
     box-shadow: 0px 15px 50px #EFF4FF
     width: 66%
+  & .owl-item
+    display: flex
+    justify-content: center
   & .owl-nav
+    & .owl-prev
+      position: absolute
+      left: 9%
+      transform: translateY(-90%)
+    & .owl-next
+      position: absolute
+      right: 9%
+      transform: translateY(-90%)
     & button
       & svg path
         transition: 0.3s
@@ -361,8 +378,12 @@ header
       &:hover svg path
         stroke: #6888FF
   & .owl-dots
+    position: absolute
+    display: flex
+    bottom: -110px
     & .owl-dot span
       background: #D1D6E3
+      transition: 0.3s
       &:hover
         background: #5283FF
     & .owl-dot.active
@@ -370,6 +391,7 @@ header
         background: #5283FF
 
 .resources__carousel__content
+  display: flex
   padding: 64px 38px
   & .image-with-search-icon
     display: flex
@@ -391,6 +413,10 @@ header
   display: flex
   justify-content: space-between
   width: 410px
+  flex: 1
+  margin-right: 35px
+  & img
+    box-shadow: 0px 15px 100px #E5EBF8
   & .big-photo
     flex: 2
     margin-right: 13px
@@ -399,14 +425,81 @@ header
     flex-direction: column
     justify-content: space-between
 
+.resources__carousel__content__text-content
+  flex: 1
+  margin-left: 35px
+  text-align: left
+  & h3
+    padding-bottom: 30px
 
+.resources__carousel__content__text-content__main-text
+  font-family: "Roboto"
+  font-size: 14px
+  font-weight: 400
+  letter-spacing: 0.03em
+  line-height: 27px
+  color: #8D96BD
+
+.resources__carousel__content__text-content__support-buttons
+  display: flex
+  align-items: center
+  padding-top: 30px
+
+.resources__carousel__content__text-content__support-buttons__read-button
+  margin-right: 40px
+
+.resources__carousel__content__text-content__support-buttons__add
+  font-family: Quicksand
+  font-size: 13px
+  font-weight: 700
+  color: #A6B6DA
 
 @media screen and (max-width: 1100px)
   .welcome-section__carousel__text-content__header
     padding-top: 50px
 
+// testimonials
+.testimonials
+  display: flex
+  background: linear-gradient(180deg, #EAF0FF 0%, #F6F9FF 100%)
 
+.testimonials__main-text
+  padding-left: 18.5%
+  & h3
+    padding-top: 30px
+    padding-bottom: 15px
 
+#testimonials__carousel
+  & .owl-item
+    width: 465px !important
+    transition: 0.3s
+    opacity: 0
+    &.active
+      opacity: 0.5
+    &.active.center
+      opacity: 1
+  & .item
+    margin-bottom: 80px
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    position: relative
+    background: #fff
+    box-shadow: 0px 5px 50px #F3F5FA
+    border: 1px solid #D8E3FE
+    & p
+      padding: 41px 70px 53px 70px
+    & img
+      height: 62px
+      width: 62px
+      position: absolute
+      bottom: -31px
+      z-index: 2
+
+.testimonials__main-text__text
+
+#testimonials__carousel
 
 
 
