--- a/planning app/css/style.sass
+++ b/planning app/css/style.sass
@@ -392,6 +392,7 @@ header
 
 .resources__carousel__content
   display: flex
+  align-content: center
   padding: 64px 38px
   & .image-with-search-icon
     display: flex
@@ -413,7 +414,7 @@ header
   display: flex
   justify-content: space-between
   width: 410px
-  flex: 1
+  height: fit-content
   margin-right: 35px
   & img
     box-shadow: 0px 15px 100px #E5EBF8
@@ -454,26 +455,25 @@ header
   font-weight: 700
   color: #A6B6DA
 
-@media screen and (max-width: 1100px)
-  .welcome-section__carousel__text-content__header
-    padding-top: 50px
-
-// testimonials
+//testimonials
 .testimonials
   display: flex
   background: linear-gradient(180deg, #EAF0FF 0%, #F6F9FF 100%)
 
 .testimonials__main-text
-  padding-left: 18.5%
+  padding: 146px 0 146px 18.5%
   & h3
     padding-top: 30px
     padding-bottom: 15px
 
 #testimonials__carousel
+  padding: 110px 0
+  overflow: hidden
   & .owl-item
-    width: 465px !important
     transition: 0.3s
     opacity: 0
+    display: flex
+    justify-content: center
     &.active
       opacity: 0.5
     &.active.center
@@ -488,8 +488,11 @@ header
     background: #fff
     box-shadow: 0px 5px 50px #F3F5FA
     border: 1px solid #D8E3FE
+    width: 423px
+    height: 175px
     & p
       padding: 41px 70px 53px 70px
+      width: 283px
     & img
       height: 62px
       width: 62px
@@ -497,10 +500,225 @@ header
       bottom: -31px
       z-index: 2
 
-.testimonials__main-text__text
+// Customer help
 
-#testimonials__carousel
+.customer-help
+  padding: 175px 0
+  text-align: center
+  display: flex
+  flex-direction: column
+  align-items: center
+  & h5
+    padding-bottom: 20px
+    text-align: center
+  & h4
+    padding-bottom: 68px
 
+.customer-help__questions-block
+  width: 52%
+  text-align: left
+
+.customer-help__questions-block__element__header
+  cursor: pointer
+  padding: 30px 0
+  & .customer-help__questions-block__element__header__text, & svg path, & svg
+    transition: 0.3s
+  &:hover, &.expanded
+    & .customer-help__questions-block__element__header__text
+      color: #495274
+    & svg path
+      stroke: #495274
+  &.expanded
+    & svg
+      transform: rotate(180deg)
+
+.customer-help__questions-block__element__header__text
+  padding-left: 25px
+
+.customer-help__questions-block__element__content
+  display: none
+  & a
+    width: auto
+    background: #E8ECF4
+    color: #7382A3
+    & span
+      text-align: center
+      width: 195px
+    &:hover
+      background: #d4d9e2
+
+.customer-help__questions-block__element__content__text
+  font-size: 15px
+  font-weight: 400
+  line-height: 19px
+  letter-spacing: 0.03em
+  color: #8E96B7
+  padding-left: 80px
+  width: 395px
+  margin-right: 30px
+
+.customer-help__questions-block__separator
+  display: flex
+  align-items: center
+  & span
+    width: 100%
+    height: 1px
+    background: #DAE4FE
+
+.customer-help__questions-block__element__content__wrapper
+  display: flex
+  justify-content: space-between
+  align-items: center
+  padding-bottom: 50px
+
+// plan your life
+
+.plan-your-life
+  position: relative
+  background: linear-gradient(229.32deg, #6888FF 12.77%, #5E80FF 73.11%) no-repeat
+
+.plan-your-life__container
+  display: flex
+  flex-direction: column
+  align-items: center
+  text-align: center
+  padding: 91px 0
+  background-image: url("../img/clouds(plan your life).svg")
+  background-repeat: no-repeat
+  background-size: cover
+  & *
+    color: #fff
+  & h5
+    text-align: center
+    padding: 0
+  & h2
+    padding: 25px 0 40px
+  & p
+    width: 45%
+    padding-bottom: 50px
+
+
+.plan-your-life__container
+  z-index: 3
+
+.plan-your-life__button-container
+  display: flex
+
+.plan-your-life__button-container__price-button
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 130px
+  height: 43px
+  background: #fff
+  color: #565F82
+  box-shadow: 0px 5px 15px #6480E8
+  font-style: normal
+  font-weight: bold
+  font-size: 13px
+  line-height: 16px
+  border-radius: 2px
+
+.plan-your-life__button-container__documentation-button
+  color: #C7D3FF
+  border: 1px solid #A0B4FF
+  border-left: 0
+  font-style: normal
+  font-weight: 500
+  font-size: 13px
+  line-height: 16px
+  display: flex
+  align-items: center
+  justify-content: center
+  width: 150px
+
+// mail sender
+
+.mail-sender
+  padding: 120px 0
+  display: flex
+  justify-content: center
+  background: #FCFDFF
+  border-bottom: 1px solid #D8E3FE
+
+.mail-sender-container
+  width: 63%
+  display: flex
+
+.mail-sender__text-content
+
+.mail-sender__text-content__header
+  font-style: normal
+  font-weight: bold
+  font-size: 18px
+  line-height: 22px
+  color: #3D4F9F
+
+.mail-sender__text-content__support-text
+  width: 65%
+  padding-top: 20px
+
+.mail-sender__form
+  display: flex
+
+.mail-sender__form__text-input
+  margin-right: 15px
+  background: #EFEFF7
+  outline: none
+  border: 0
+  width: 280px
+  height: 60px
+  border-radius: 5px
+  padding-left: 21px
+  color: #7A85AD
+  font-style: normal
+  font-weight: bold
+  font-size: 13px
+  line-height: 16px
+  &::placeholder
+    padding: 21px 21px 21px 0
+    color: #7A85AD
+    font-style: normal
+    font-weight: bold
+    font-size: 13px
+    line-height: 16px
+
+.mail-sender__form__submit-btn
+  background: #4D6CE1
+  width: 185px
+  height: 60px
+  border-radius: 5px
+  border: 0
+  box-shadow: 0px 5px 15px rgba(116, 104, 255, 0.2)
+  color: #fff
+  font-style: normal
+  font-weight: bold
+  font-size: 13px
+  line-height: 16px
+  outline: none
+  cursor: pointer
+  transition: 0.3s
+  &:hover
+    background: #3f58bc
+
+//footer
+
+footer
+  padding: 92px 0
+
+.footer__copyright
+  padding-left: 13%
+  font-style: normal
+  font-weight: 500
+  font-size: 12px
+  text-align: center
+  letter-spacing: 0.05em
+  text-transform: capitalize
+  color: #AEB8D0
+
+@media screen and (max-width: 1100px)
+  .welcome-section__carousel__text-content__header
+    padding-top: 50px
 
 
 
