planning app: Исправлены  ошибки

--- a/planning app/css/style.css
+++ b/planning app/css/style.css
@@ -790,7 +790,7 @@ header {
   line-height: 16px;
 }
 .mail-sender__form__text-input::placeholder {
-  padding: 21px 21px 21px 0;
+  padding: 0 21px 21px 0;
   color: #7A85AD;
   font-style: normal;
   font-weight: bold;
