--- a/planning app/css/style.sass
+++ b/planning app/css/style.sass
@@ -676,7 +676,7 @@ header
   font-size: 13px
   line-height: 16px
   &::placeholder
-    padding: 21px 21px 21px 0
+    padding: 0 21px 21px 0
     color: #7A85AD
     font-style: normal
     font-weight: bold
