--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -35,7 +35,11 @@ h1
   font-size: 72px
 
 h2
-  font-size: 40px
+  font-size: 60px
+  padding-bottom: 30px
+
+h3
+  font-size: 35px
 
 main
   position: relative
@@ -69,7 +73,7 @@ main
 
 
 .main-section
-  //position: relative
+  position: relative
   overflow: hidden
   color: #fff
   background: $main-bg
@@ -80,10 +84,9 @@ main
   & .main-section__arrow
     position: absolute
     height: 25vh
-    bottom: 10vh
+    bottom: 30px
     z-index: 10
     animation: arrow-jump-animation 10s ease-in-out infinite
-
   & h1
     position: absolute
     z-index: 10
@@ -119,4 +122,68 @@ progress
   top: 3px
 
 #about
+  padding: 80px 0px
   z-index: 2
+
+.about__text
+  height: 100%
+  display: flex
+  flex-direction: column
+  justify-content: center
+
+.about__text__paragraph
+  text-indent: 20px
+
+.about__image-container
+  & img
+    width: 100%
+
+.timetable
+  padding: 80px 0
+  background: $main-bg
+  color: #fff
+
+.timetable__container
+  padding: 20px 0px
+  display: flex
+  justify-content: space-around
+
+.timetable__link
+  transition: 0.2s
+  &:hover
+    color: #17A2B8
+
+.timetable__dates
+  display: flex
+  align-items: center
+  padding-top: 80px
+
+.timetable__dates__name-of-date
+  text-align: center
+
+.timetable__dates__events-list
+  border-left: 1px solid $color-1
+  padding-left: 30px
+  margin-bottom: 40px
+  font-size: 18px
+
+.timetable__dates__events-list__element
+  display: flex
+  justify-content: start
+  flex-wrap: wrap
+  padding: 20px 0px
+
+.timetable__dates__events-list__element__name
+  padding-left: 30px
+
+.timetable__dates__events-list__element__open-more
+  margin-left: auto
+  cursor: pointer
+  transition: 0.2s
+  &:hover
+    color: $color-1
+
+.timetable__dates__events-list__element__more-text
+  padding-top: 20px
+  width: 100%
+  display: none
