--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -87,6 +87,11 @@ main
     bottom: 30px
     z-index: 10
     animation: arrow-jump-animation 10s ease-in-out infinite
+    & path
+      transition: 0.2s
+    &:hover path
+      fill: $color-1
+
   & h1
     position: absolute
     z-index: 10
