--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -2,8 +2,9 @@
 
 $main-bg: #1a1b22
 $color-1: #17A2B8
+
 html
-  scroll-behavior: smooth
+  //scroll-behavior: smooth
 
 *
   margin: 0
@@ -22,6 +23,8 @@ a
     text-decoration: none
 
 .link-to-join
+  width: fit-content
+  height: fit-content
   background: #ea7e1b
   padding: 9px 23px
   border-radius: 4px
@@ -71,7 +74,6 @@ main
   .header__creator-name
     font-size: 12px
 
-
 .main-section
   position: relative
   overflow: hidden
@@ -91,10 +93,10 @@ main
       transition: 0.2s
     &:hover path
       fill: $color-1
-
   & h1
     position: absolute
     z-index: 10
+    text-align: center
   & .main-section__bg-block
     z-index: 1
     min-width: 50px
@@ -192,3 +194,15 @@ progress
   padding-top: 20px
   width: 100%
   display: none
+
+@media screen and (max-width: 576px)
+  .main-section
+    & h1
+      font-size: 12vw
+
+@media screen and (max-width: 767px)
+  .header__logo
+    padding-left: 0px
+
+
+
