--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -40,6 +40,7 @@ h1
 h2
   font-size: 60px
   padding-bottom: 30px
+  max-width: 80vw
 
 h3
   font-size: 35px
@@ -201,8 +202,19 @@ progress
       font-size: 12vw
 
 @media screen and (max-width: 767px)
+  h2
+    font-size: 52px
+
   .header__logo
     padding-left: 0px
+
+  .timetable__container
+    padding: 0
+    flex-wrap: wrap
+    & .timetable__link
+      width: 45vw
+      text-align: center
+      padding-top: 15px
 
 
 
