IT класс: Сделана страница

--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -164,7 +164,7 @@ progress
 .timetable__dates
   display: flex
   align-items: center
-  padding-top: 80px
+  //padding-top: 80px
 
 .timetable__dates__name-of-date
   text-align: center
@@ -203,7 +203,7 @@ progress
 
 @media screen and (max-width: 767px)
   h2
-    font-size: 52px
+    font-size: 50px
 
   .header__logo
     padding-left: 0px
@@ -216,5 +216,17 @@ progress
       text-align: center
       padding-top: 15px
 
+  .timetable__dates__events-list
+    border-top: 1px solid #17a2b8
+    border-left: 0
+    margin-top: 15px
+    padding-top: 15px
+    padding-left: 0
+
+  .timetable__dates__events-list__element__open-more
+    padding-top: 5px
+
+  .timetable__dates__events-list__element
+    //padding-top: 10px
 
 
