--- a/landing_for_it_class/css/main.css
+++ b/landing_for_it_class/css/main.css
@@ -192,7 +192,6 @@ progress {
 .timetable__dates {
   display: flex;
   align-items: center;
-  padding-top: 80px;
 }
 
 .timetable__dates__name-of-date {
@@ -239,7 +238,7 @@ progress {
 }
 @media screen and (max-width: 767px) {
   h2 {
-    font-size: 52px;
+    font-size: 50px;
   }
 
   .header__logo {
@@ -254,6 +253,18 @@ progress {
     width: 45vw;
     text-align: center;
     padding-top: 15px;
+  }
+
+  .timetable__dates__events-list {
+    border-top: 1px solid #17a2b8;
+    border-left: 0;
+    margin-top: 15px;
+    padding-top: 15px;
+    padding-left: 0;
+  }
+
+  .timetable__dates__events-list__element__open-more {
+    padding-top: 5px;
   }
 }
 
