--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -225,6 +225,8 @@ progress
 
   .timetable__dates__events-list__element__open-more
     padding-top: 5px
+    width: 100%
+    text-align: right
 
   .timetable__dates__events-list__element
     //padding-top: 10px
