IT класс: сделан footer

--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -147,7 +147,7 @@ progress
     width: 100%
 
 .timetable
-  padding: 80px 0
+  padding: 80px 0 40px
   background: $main-bg
   color: #fff
 
@@ -195,6 +195,13 @@ progress
   padding-top: 20px
   width: 100%
   display: none
+
+footer
+  text-align: center
+  padding-bottom: 20px
+  color: $color-1
+  background: $main-bg
+  font-size: 14px
 
 @media screen and (max-width: 576px)
   .main-section
