--- a/landing_for_it_class/css/main.css
+++ b/landing_for_it_class/css/main.css
@@ -171,7 +171,7 @@ progress {
 }
 
 .timetable {
-  padding: 80px 0;
+  padding: 80px 0 40px;
   background: #1a1b22;
   color: #fff;
 }
@@ -229,6 +229,14 @@ progress {
   padding-top: 20px;
   width: 100%;
   display: none;
+}
+
+footer {
+  text-align: center;
+  padding-bottom: 20px;
+  color: #17A2B8;
+  background: #1a1b22;
+  font-size: 14px;
 }
 
 @media screen and (max-width: 576px) {
