--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap')
 
 $main-bg: #1a1b22
-$color-1: #17A2B8
+$color-1: #17a2b8
 
 html
   //scroll-behavior: smooth
@@ -38,7 +38,7 @@ h1
   font-size: 72px
 
 h2
-  font-size: 60px
+  font-size: 55px
   padding-bottom: 30px
   max-width: 80vw
 
@@ -133,6 +133,11 @@ progress
   padding: 80px 0px
   z-index: 2
 
+.about__mini-label
+  padding-left: 15px
+  font-size: 14px
+  font-weight: 300
+
 .about__text
   height: 100%
   display: flex
@@ -141,13 +146,14 @@ progress
 
 .about__text__paragraph
   text-indent: 20px
+  font-size: 18px
 
 .about__image-container
   & img
     width: 100%
 
 .timetable
-  padding: 80px 0 40px
+  padding: 80px 0 0
   background: $main-bg
   color: #fff
 
@@ -181,6 +187,9 @@ progress
   flex-wrap: wrap
   padding: 20px 0px
 
+.timetable__dates__events-list__element__time
+  min-width: 13ex
+
 .timetable__dates__events-list__element__name
   padding-left: 30px
 
@@ -188,6 +197,8 @@ progress
   margin-left: auto
   cursor: pointer
   transition: 0.2s
+  & span
+    color: gold
   &:hover
     color: $color-1
 
@@ -197,16 +208,29 @@ progress
   display: none
 
 footer
-  text-align: center
-  padding-bottom: 20px
-  color: $color-1
+  color: #fff
+  display: flex
+  flex-direction: column
+  align-items: center
   background: $main-bg
-  font-size: 14px
+  font-size: 28px
+  & p
+    font-size: 12px
+    color: $color-1
+  & a
+    padding: 80px 0
+    transition: 0.2s
+    &:hover
+      color: $color-1
+
 
 @media screen and (max-width: 576px)
   .main-section
     & h1
       font-size: 12vw
+      transform: translateY(-40px)
+  .main-section .main-section__arrow
+    bottom: 70px
 
 @media screen and (max-width: 767px)
   h2
