--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -218,11 +218,8 @@ footer
     font-size: 12px
     color: $color-1
   & a
-    padding: 80px 0
     transition: 0.2s
-    &:hover
-      color: $color-1
-
+    color: #fff
 
 @media screen and (max-width: 576px)
   .main-section
