Изменен bg лендинга для it класса

--- a/landing_for_it_class/css/main.sass
+++ b/landing_for_it_class/css/main.sass
@@ -104,7 +104,7 @@ main
     height: 100px
     background: $main-bg
     border-radius: 2px
-    box-shadow: 0 0 10px 0px rgba(200, 200, 200, 0.08)
+    box-shadow: 0 0 10px 0 rgba(23, 162, 184, 0.07)
 
 
 @keyframes arrow-jump-animation
